# md-splice

./: .gitignore  .md-splice_repo_snapshot.md  .promptignore  .ripgreprc  Cargo.toml  Makefile.toml  README.md  justfile
.github/workflows/: python-wheels.yml  release.yml
devel/: DEVELOPMENT_PLAN.md  Specification.md  markdown-ppp_repo_snapshot.md
devel/prompts/system/: implementer.j2.md
devel/prompts/user/: lets-pursue-implementation.j2.md
docs/: chained-selector-reuse-report.md  selector-reuse-flag-study.md
goal-Devise_rust_library/: Goal.md  Progress-status.md  Strategy.md
goal-Frontmatter_support/: Progress-status.md  Specification.md  Strategy.md
goal-Python-context-manager/: Progress-status.md  Specification.md  Strategy.md
goal-Python-library/: Progress-status.md  Specification.md  Strategy.md
goal-Relational_and_range-based_selectors/: Progress-status.md  Specification.md  Strategy.md
goal-chained_selector_reuse/: Progress-archive.md  Progress-status.md  Strategy.md
goal-delete-command/: Delete-command-specification.md  Progress-status.md  Strategy.md
goal-get-command/: Get-command-specification.md  Progress-status.md  Strategy.md
goal-transactions/: Progress-status.md  Strategy.md  Transactions-specification.md
md-splice/: Cargo.toml
md-splice-lib/: Cargo.toml  README.md
md-splice-lib/src/: cli.rs  error.rs  frontmatter.rs  lib.rs  locator.rs  splicer.rs  transaction.rs
md-splice-lib/tests/: api.rs
md-splice-py/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
md-splice-py/md_splice/: __init__.py  ctx.py  errors.py  types.py
md-splice-py/src/: lib.rs
md-splice-py/tests/: test_apply.py  test_context_managers.py  test_errors.py  test_frontmatter.py  test_get.py  test_imports.py  test_io.py  test_operations_io.py  test_property_behaviors.py  test_selectors.py
md-splice/src/: app.rs  cli.rs  main.rs
md-splice/tests/: apply.rs  cli.rs  delete_cmd.rs  get.rs  scoped_selectors.rs
md-splice/tests/fixtures/frontmatter/: malformed.md
md-splice/tests/snapshots/: apply__apply_command_diff_output.snap  cli__i10_stdin_to_file.snap  cli__i1_help.snap  cli__i1_help_apply.snap  cli__i1_help_insert.snap  cli__i2_replace_output.snap  cli__i4_content_file_output.snap  cli__i7_source_from_stdin.snap  cli__li1_replace_list_item.snap  cli__li2_insert_list_item.snap  cli__li4_nested_list_insert.snap
scripts/: bootstrap.sh
src/: cli.rs  error.rs  frontmatter.rs  lib.rs  locator.rs  splicer.rs  transaction.rs
tests/: apply.rs  cli.rs  cmd_frontmatter.rs  scoped_selectors.rs
tests/fixtures/frontmatter/: empty_frontmatter.md  no_frontmatter.md  toml_simple.md  yaml_simple.md
tests/snapshots/: cli__i1_help.snap  cli__i1_help_insert.snap  cli__i1_help_replace.snap  cli__i1_version.snap  cli__i2_insert_output.snap  cli__li1_replace_list_item.snap  cli__li2_insert_list_item.snap  cli__li4_nested_list_insert.snap
