[package]
name = "md-splice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
markdown-ppp = { version = "2.0.1", features = ["ast-serde", "parser", "printer", "serde"] }
regex = "1.11.1"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.17"
insta = { version = "1.43.1", features = ["redactions"] }
rstest = "0.25.0"
