[package]
name = "md-splice-lib"
version = "0.5.1"
edition = "2021"
authors = ["Nicolas Girard <girard.nicolas@gmail.com>"]
description = "Core Rust library powering the md-splice Markdown editing toolkit"
license = "MIT"
homepage = "https://github.com/ngirard/md-splice"
repository = "https://github.com/ngirard/md-splice"
documentation = "https://github.com/ngirard/md-splice/tree/main"
readme = "README.md"

[lib]
name = "md_splice_lib"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
markdown-ppp = { version = "2.7.1", features = ["ast-serde", "parser", "printer", "serde"] }
regex = "1.12.2"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
toml = "0.8.19"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
insta = { version = "1.43.2", features = ["redactions"] }
predicates = "3.1.3"
rstest = "0.26.1"

