[package]
name = "md-splice-py"
version = "0.0.1"
edition = "2021"

[lib]
name = "md_splice_native"
crate-type = ["cdylib"]

[dependencies]
md-splice-lib = { path = "../md-splice-lib" }
pyo3 = { version = "0.21", features = ["extension-module"] }
serde_json = "1.0"
serde_yaml = "0.9"
markdown-ppp = { version = "2.7.1", features = ["ast-serde", "parser", "printer", "serde"] }
regex = "1.12"
similar = "2.6"
tempfile = "3.12"

[package.metadata.maturin]
name = "md_splice._native"
