[package]
name = "md-splice-py"
version = "0.5.1"
edition = "2021"
description = "Python bindings for the md-splice Markdown editing toolkit"
license = "MIT"
homepage = "https://github.com/ngirard/md-splice"
repository = "https://github.com/ngirard/md-splice"
documentation = "https://github.com/ngirard/md-splice/tree/main/goal-Python-library"
readme = "README.md"

[lib]
name = "md_splice_native"
crate-type = ["cdylib"]

[dependencies]
md-splice-lib = { path = "../md-splice-lib" }
pyo3 = { version = "0.27.1", features = ["extension-module"] }
serde_json = "1.0"
serde_yaml = "0.9"
markdown-ppp = { version = "2.7.1", features = ["ast-serde", "parser", "printer", "serde"] }
regex = "1.12"
similar = "2.7"
tempfile = "3.23"

[package.metadata.maturin]
name = "md_splice._native"
