[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "md-splice"
version = "0.5.0"
description = "Python bindings for md-splice"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "md-splice maintainers" }]
license = { file = "../LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.92",
]

[tool.maturin]
bindings = "pyo3"
module-name = "md_splice._native"
python-source = "."
