[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "md-splice"
version = "0.5.0"
description = "Python bindings for the md-splice Markdown editing toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "md-splice maintainers" }]
license = { file = "LICENSE" }
keywords = ["markdown", "ast", "editor", "automation", "tooling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ngirard/md-splice"
Repository = "https://github.com/ngirard/md-splice"
Documentation = "https://github.com/ngirard/md-splice/tree/main/goal-Python-library"
Changelog = "https://github.com/ngirard/md-splice/tree/main/md-splice-py/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.92",
]

[tool.maturin]
bindings = "pyo3"
module-name = "md_splice._native"
python-source = "."
sdist-include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "src/**",
    "md_splice/**",
    "pyproject.toml",
]
