[package]
name = "md-splice"
version = "0.5.0"
edition = "2021"

[dependencies]
md-splice-lib = { path = "../md-splice-lib", version = "0.5.0" }
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
insta = { version = "1.43.2", features = ["redactions"] }
predicates = "3.1.3"
regex = "1.12.2"
rstest = "0.26.1"
